Criei a função e suas variáveis

--- a/Algoritmo/Final/index.html
+++ b/Algoritmo/Final/index.html
@@ -31,3 +31,21 @@
     </body>
 
 </html>
+<script>
+
+    function analise(){
+        var mtsul = 0.175;
+        var mt = 0.124;
+        var pr = 0.114;
+
+        var nomeEmpresa = input_nome.value; //XXX
+        var uf =  input_uf.value; //ZZZ
+        var qtdHectare = Number (input_hectare.value); //YYY
+        var valorSaca = Number (input_saca.value); //VVV
+
+        var ganhoEmpresa =  0;
+        var perdaCorrigida = 0;
+        var ganhoHectare =  0;
+        var perdaReal = 0;
+    }
+</script>
