--- a/Algoritmo/Final/index.html
+++ b/Algoritmo/Final/index.html
@@ -54,18 +54,17 @@ function analisePerda() {
     var valorTotal = ganhoTonelada - perdaCorrigida; // Cálculo da receita final após a redução da perda.
 
 
-        div_mensagem.innerHTML = ` A empresa ${nomeEmpresa} com a sua produção de um total de ${qtdHectare} hectares, com sua produção concentrado em ${uf}. <br> 
-    Atualmente a saca de grão de soja vale R$${valorSaca}, dado que em média uma saca de soja pesa 60Kg, pela Conab (Companhia Nacional de Abastecimento), por hectare é produzido cerca de 3200kg. <br> <br>
+        div_mensagem.innerHTML = ` A empresa ${nomeEmpresa} possui um total de ${qtdToneladas} toneladas de grãos de soja armazenadas em seus silos, e tem sua produção concentrada em ${uf}. <br> 
+    Atualmente a saca de grão de soja vale R$${valorSaca}, dado que em média uma saca de soja pesa 60Kg, cada tonelada produzida gerará uma receita de  R$${ganhoPorTonelada}. <br> <br>
 
-    A perda média de grãos por mal armazenamento em ${uf} tem um valor médio de ${porcentagem}. <br>
-    No total a empresa ${nomeEmpresa} ganha, em média, cerca de R$${ganhoEmpresa} reais hoje em sua produção, já com perdas pelo mal armazenamento. <br> <br>
+    A perda média de grãos por armazenamento inadequado, no Brasil, segundo a Companhia Nacional de Abastecimento (Conab/2023), é de ${porcentagem}. <br>
+    Atualmente, a empresa ${nomeEmpresa} obtém uma receita média de R$${ganhoEmpresa}, já considerando as perdas causadas pelo armazenamento inadequado. <br> <br>
 
-    Dado os valores a empresa ${nomeEmpresa}, terá uma perda de R$${perdaReal} em sua produção. <br> <br>
+    Com base nesses valores, a empresa ${nomeEmpresa} sofre uma perda estimada de R$${perdaReal} em sua produção. <br> <br>
     
-    Já com a nossa solução ao invés de ${porcentagem}, estima-se diminuir essa perda em até 8%. <br>
-    Com a soluçao a empresa ${nomeEmpresa}, terá uma perda de R$${perdaCorrigida} em sua produção. <br> <br>
-    Aumentando o lucro da produção de R$${ganhoEmpresa}, para: R$${valorTotal}!`
-
+    No entanto, com a nossa solução, em vez de ${porcentagem}, estima-se uma redução dessa perda em até 7.5%. <br>
+    Isso elevaria a receita da produção de R$${ganhoEmpresa}, para: R$${valorTotal}!
+    `
 }
 
 </script>
