--- a/Algoritmo/Final/calculadoraFinanceira_GraoSafe_V2.html
+++ b/Algoritmo/Final/calculadoraFinanceira_GraoSafe_V2.html
@@ -12,14 +12,11 @@
     Digite o nome da sua Empresa:
     <input type="text" id="input_nome"> <br> <br>
 
-    Digite a UF do estado onde se concentra sua produção:
-    <input type="text" id="input_uf" placeholder="UF do estado"> <br> <br>
-
     Digite a quantidade de toneladas armazenado em seus silos:
-    <input type="text" id="input_toneladas" placeholder="Digite valores inteiros"> <br> <br>
+    <input type="text" id="input_toneladas" placeholder="Digite o valor"> <br> <br>
 
     Digite a cotação da saca de soja atual:
-    <input type="text" id="input_saca" placeholder="Digite valores inteiros"> <br> <br>
+    <input type="text" id="input_saca" placeholder="Digite o valor"> <br> <br>
 
     <button onclick="analisePerda()">Analise de Safra</button><br> <br>
 
@@ -32,48 +29,73 @@
 
 function analisePerda() {
     var nomeEmpresa = input_nome.value; // Nome da empresa informado pelo usuário
-    var uf = input_uf.value; // Unidade federativa (estado) onde a empresa está localizada
+    // var uf = input_uf.value; // Unidade federativa (estado) onde a empresa está localizada
     var qtdToneladas = Number(input_toneladas.value); // Quantidade total de toneladas de soja armazenadas
     var valorSaca = Number(input_saca.value); // Valor de uma saca de soja em reais
 
-    var perda = 0.15; // Percentual de perda estimado devido ao armazenamento inadequado (15%)
-    var ganhoEmpresa = 0; // Variável para armazenar o ganho real da empresa após perda de 15%.
-    var ganhoTonelada = 0; // Variável para armazenar a receita bruta baseada na produção total antes das perdas.
+    // validação dos campos preenchidos
+    if (nomeEmpresa == "" || qtdToneladas == "" || valorSaca == "" ){ 
+        div_mensagem.innerHTML =""
+        alert("Por favor, preencha todos os campos, é obrigatório!")
+            } else if(qtdToneladas < 0 || valorSaca < 0){ // validação dos campos em valores positivos
+                div_mensagem.innerHTML =""
+                alert("Por favor, preencha os campos com valores positivos, é obrigatório!")
+                    } else{
+
+    var perdaBrasil = 0.15; // Percentual de perda estimado devido ao armazenamento inadequado (15%)
+    var receitaLiquida = 0; // Variável para armazenar a receita LIQUIDA da empresa após perda de 15%.
+    var receitaBruta = 0; // Variável para armazenar a receita BRUTA baseada na produção total antes das perdas.
     var perdaReal = 0; // Valor real perdido devido ao armazenamento inadequado.
     var perdaCorrigida = 0; // Valor da perda corrigida considerando a solução proposta.
-    var porcentagem = "15%"; // Representação textual da porcentagem de perda.
 
-    var ganhoPorTonelada = ((1000 / 60) * valorSaca); // Cálculo de Receita por tonelada de soja produzida, utilizando o peso e valor da saca para o cálculo, será utilizada na mensagem!
-    ganhoTotal = ((1000 / 60) * valorSaca) * qtdToneladas; // Cálculo da receita total antes das perdas, valor por tonelada multiplicado pela produção da empresa.
+    var sacasEmqtdToneladas = ((qtdToneladas * 1000)/60).toFixed(0); //Cálculo da quantidade de sacas de soja de acordo com a quantidade de toneladas produzida pela empresa
+    var perdaDeSacas = (sacasEmqtdToneladas * perdaBrasil).toFixed(0); //Cálculo da quantidade estimada de sacas de soja perdidas devido ao armazenamento inadequado (15%) pelo empresa
+    var perdaDeToneladas = (qtdToneladas * perdaBrasil).toFixed(0); //Cálculo da quantidade estimada de toneladas de soja perdidas devido ao armazenamento inadequado (15%) pela empresa
+
+    var ganhoPorTonelada = ((1000 / 60) * valorSaca); // Cálculo de Receita UMA tonelada de soja produzida, utilizando o peso e valor da saca para o cálculo, será utilizada na mensagem!
+    receitaBruta = ((1000 / 60) * valorSaca) * qtdToneladas; // Cálculo da receita BRUTA, antes das perdas, valor por tonelada multiplicado pela produção da empresa.
    
-    perdaReal = (ganhoTotal * perda); // Cálculo da perda real com base no percentual de 15%.
-    ganhoEmpresa = ganhoTotal - perdaReal; // Cálculo da receita da empresa considerando a perda.
+    perdaReal = (receitaBruta * perdaBrasil); // Cálculo da perda real com base no percentual de 15%.
+    receitaLiquida = receitaBruta - perdaReal; // Cálculo da receita LIQUIDA da empresa considerando a perda de 15%.
 
-    perdaCorrigida = (ganhoTotal * 0.075);  // Cálculo da perda corrigida considerando a estimativa proposta (redução para 7,5%)
-    var valorTotal = ganhoTotal - perdaCorrigida; // Cálculo da receita final após a redução da perda.
+    perdaCorrigida = (receitaBruta * 0.075);  // Cálculo da perda corrigida considerando a estimativa proposta (redução para 7,5%)
+    var receitaLqCorrigida = receitaBruta - perdaCorrigida; // Cálculo da receita LIQUIDA final após a redução da perda.
+    var difReceitas = receitaLqCorrigida - receitaLiquida; // Cálculo da diferença de a Receita Liquida com a perda de 7,5% pela Receita Liquida com a perda de 15%
 
     // Tranformando os valores dos cálculos em valores monetários no padrão brasileiro. 
     valorSaca = valorSaca.toLocaleString('pt-BR', { minimumFractionDigits: 2, maximumFractionDigits: 2 }); //Garante que o número sempre tenha pelo menos 2 casas decimais e limita o número a no máximo 2 casas decimais.
     ganhoPorTonelada = ganhoPorTonelada.toLocaleString('pt-BR', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
-    ganhoEmpresa = ganhoEmpresa.toLocaleString('pt-BR', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
+    receitaLiquida = receitaLiquida.toLocaleString('pt-BR', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
     perdaReal = perdaReal.toLocaleString('pt-BR', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
-    valorTotal = valorTotal.toLocaleString('pt-BR', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
+    receitaLqCorrigida = receitaLqCorrigida.toLocaleString('pt-BR', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
+    receitaBruta = receitaBruta.toLocaleString('pt-BR', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
+    perdaCorrigida = perdaCorrigida.toLocaleString('pt-BR', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
+    difReceitas = difReceitas.toLocaleString('pt-BR', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
     
 
     // Exibição da mensagem com os resultados calculados:
-    div_mensagem.innerHTML = ` A empresa ${nomeEmpresa} possui um total de ${qtdToneladas} toneladas de grãos de soja armazenadas em seus silos, e tem sua produção concentrada no estado de ${uf}. <br> 
-    A cotação da saca de grão de soja atual é R$${valorSaca}, dado que em média uma saca de soja pesa 60Kg, cada tonelada produzida gerará uma receita de R$${ganhoPorTonelada}. <br> <br>
+    div_mensagem.innerHTML = ` A empresa ${nomeEmpresa} possui um total de ${qtdToneladas} toneladas de grãos de soja armazenadas em seus silos. <br> <br>
 
-    A perda média de grãos por armazenamento inadequado, no Brasil, segundo a Companhia Nacional de Abastecimento (Conab/2023), é de ${porcentagem}. <br>
+    <i>- Realizaremos o cálculo da receita bruta com base na <b>cotação da saca de soja</b> atual:</i> <br> <br>
 
-    Com base nesses valores, a empresa ${nomeEmpresa} sofre uma perda estimada de R$${perdaReal} em sua produção. <br> <br>
-    Atualmente, a empresa ${nomeEmpresa} obtém uma receita líquida média de R$${ganhoEmpresa}, já considerando as perdas causadas pelo armazenamento inadequado. <br> <br>
+    A cotação da saca de grão de soja atual é R$${valorSaca} reais, dado que em média uma saca de soja pesa 60Kg, <b>uma</b> tonelada produzida gerará uma receita de R$${ganhoPorTonelada} reais. <br>
+    A empresa ${nomeEmpresa}, produz um total de ${sacasEmqtdToneladas} sacas de soja em sua produção de ${qtdToneladas} toneladas, gerando uma receita <b>BRUTA</b> de <b style="color: green">R$${receitaBruta}</b> reais. <br> <br>
+
+    <hr>
+    <i>- Cálculo da perda por mal armazenamento:</i> <br> <br>
+    A perda média de grãos por armazenamento inadequado, no Brasil, segundo a Companhia Nacional de Abastecimento (Conab/2023), é de <b>15%</b>. <br> <br>
+
+    Com base nesses valores, a empresa ${nomeEmpresa} sofre uma perda estimada de <b style="color: red">R$${perdaReal}</b> reais em sua produção, o que representa a perda de <b style="color: red">${perdaDeSacas}</b> sacas de grão de soja, <br>
+    que equivale a <b style="color: red">${perdaDeToneladas}</b>  toneladas de grãos de soja perdidas . <br>
+    Gerando uma receita <b>LÍQUIDA</b> média de <b>R$${receitaLiquida}</b> reais, já considerando as perdas causadas pelo armazenamento inadequado. <br> <br>
     
-    No entanto, com a nossa solução, estima-se uma redução dessa perda em até 50%. <br>
-    <b><i>Isso elevaria a receita média líquida da produção de R$${ganhoEmpresa}, para: R$${valorTotal}!</b></i>
+    <hr>
+    <i>- Resultado com solução:</i> <br> <br>
+
+    No entanto, com a nossa solução, <b>estima-se</b> uma redução dessa perda em até <b>50%</b>, ela terá uma perda de <b>R$${perdaCorrigida} reais</b> em sua produção. <br>
+    Isso elevaria a receita média <b>LÍQUIDA</b> da produção de <b style="color: red">R$${receitaLiquida}</b>, para: <b style="color: green">R$${receitaLqCorrigida}</b> reais! <br>
+    Aumentando a receita líquida da ${nomeEmpresa} em <b style="color: green">R$${difReceitas} reais</b>
     `
+    }
 } 
 </script>
-
-
-<!-- Ver a "receita média", fazer a pontuação dos valores, ver a questão dos UF -->
