Revisei os códigos de bd e algoritmos

--- a/Algoritmo/Final/calculadoraFinanceira_GraoSafe.html
+++ b/Algoritmo/Final/calculadoraFinanceira_GraoSafe.html
@@ -13,10 +13,10 @@
     <input type="text" id="input_nome"> <br> <br>
 
     Digite a quantidade de toneladas armazenado em seus silos:
-    <input type="text" id="input_toneladas" placeholder="Digite o valor"> <br> <br>
+    <input type="number" id="input_toneladas" placeholder="Digite o valor"> <br> <br>
 
     Digite a cotação da saca de soja atual:
-    <input type="text" id="input_saca" placeholder="Digite o valor"> <br> <br>
+    <input type="number" id="input_saca" placeholder="Digite o valor"> <br> <br>
 
     <button onclick="analisePerda()">Analise de Safra</button><br> <br>
 
